@@ -1,2 +1,2 @@
-#Quisk version 4.2.31
+#Quisk version 4.2.32
 from .quisk import main
